<resources>
    <string name="app_name">Healthify</string>
    <string name="bmi_calculator_btn">BMI Calculator</string>
    <string name="daily_calary_calculator_btn">Daily Calorie Calculator</string>
    <string name="body_fat_cal_btn">body fat calculator</string>
    <string name="body_shape_cal_btn">Body shape calculator</string>
    <string name="helthify">Helthify</string>
    <string name="homejpg">Home Image</string>
    <string name="calculateMyBodyFat_btn">Calculate My Body Fat</string>
    <string name="myrecords_btn">My Records</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="Height">Height</string>
    <string name="waist">Waist</string>
    <string name="Hip">Hip</string>
    <string name="Neck">Neck</string>
    <string name="Weight">Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="et_age">Enter Age</string>
    <string name="et_height">Enter Height</string>
    <string name="et_waist">Enter Waist</string>
    <string name="et_hip">Enter Hip</string>
    <string name="et_neck">Enter Neck</string>
    <string name="et_weight">Enter Weight</string>
    <string name="cal_btn">Calculate</string>
    <string name="swim">swim</string>
    <string name="result">Results</string>
    <string name="bodyfat">Body Fat :</string>
    <string name="bodyFatResult" />
    <string name="bodyFatResultMark">%</string>
    <string name="saveResult">save results</string>
    <string name="cancelResultbtn">Cancel</string>
    <string name="tableHeding1">Male</string>
    <string name="tableHeding2">Female</string>
    <string name="tableHeding3">Classification</string>
    <string name="row11">2-5%</string>
    <string name="row21">6-13%</string>
    <string name="row31">14-17%</string>
    <string name="row41">18-25%</string>
    <string name="row51">25% +</string>
    <string name="row12">10-13%</string>
    <string name="row22">14-20%</string>
    <string name="row32">21-24%</string>
    <string name="row42">25-31%</string>
    <string name="row52">32% +</string>
    <string name="essentialFat">Essential Fat</string>
    <string name="athletes">Athletes</string>
    <string name="fitness">Fitness</string>
    <string name="acceptable">Acceptable</string>
    <string name="obese">Obese</string>
    <string name="toast_msg">Record Have Been Successfully</string>
    <string name="myrecords">My Records</string>
    <string name="updateBtn">update</string>
    <string name="deleteBtn">delete</string>
    <string name="delete_toast">Record Has Been Successfully Deleted</string>
    <string name="feet">Feet</string>
    <string name="ed_bmi_feet">Enter Feet</string>
    <string name="ed_bmi_weight">Enter Weight</string>
    <string name="ed_bmi_Inches">Enter Inches</string>
    <string name="bmi_text">BMI :</string>
    <string name="bmi_result">---</string>
    <string name="bmi_cal_btn">calculate</string>
    <string name="bmi_records_btn">Records</string>
    <string name="new_bmi_btn">Calculate new bmi</string>
    <string name="date">Date</string>
    <string name="bmi_update_btn">Update</string>
    <string name="bmi_delete_btn">delete</string>
    <string name="bmi_after_update_btn">update</string>
    <string name="et_gender">Enter Gender</string>
    <string name="update_btn">update</string>
    <string name="saved">SAVED</string>
    <string name="delete">DELETED</string>
    <string name="update">UPDATED</string>
    <string name="home_btn">home</string>
    <string name="inches">Inches</string>
    <string name="home_img_btn" />
    <string name="ed_shape_bust">Enter Bust Size</string>
    <string name="ed_shape_waist">Enter Waist</string>
    <string name="ed_shape_Hight_hip">Enter High Hip</string>
    <string name="ed_shape_hip">Enter Hip</string>
    <string name="shape_list">Shape_list</string>


</resources>