<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMI.BmiForm">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#034c81"
            app:title="BMI Calculator"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="976dp"
        android:layout_height="1450dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bmi2" />

    <Button
        android:id="@+id/bmi_after_update_btn"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginBottom="116dp"
        android:onClick="openRecords"
        android:text="@string/bmi_records_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_cal_btn"
        app:layout_constraintVertical_bias="0.545" />

    <View
        android:id="@+id/view4"
        android:layout_width="237dp"
        android:layout_height="217dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.5"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:text="@string/Weight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ed_bmi_weight"
        app:layout_constraintEnd_toStartOf="@+id/ed_bmi_weight"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/Height"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ed_bmi_height_feet"
        app:layout_constraintEnd_toStartOf="@+id/ed_bmi_height_feet"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bmi_cal_btn"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:onClick="calculteBmi"
        android:text="@string/bmi_cal_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="61dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:alpha="0.5"
        android:background="@color/black"
        android:text="@string/bmi_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bmi_cal_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="61dp"
        android:layout_height="32dp"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:alpha="0.5"
        android:background="@color/black"
        android:text="@string/bmi_result"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_bmi_height_feet"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/ed_bmi_feet"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ed_bmi_weight"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/ed_bmi_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/ed_bmi_weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_bmi_height_feet" />

    <EditText
        android:id="@+id/ed_bmi_inches"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/ed_bmi_Inches"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/ed_bmi_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ed_bmi_height_feet"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.88" />

    <ImageButton
        android:id="@+id/home_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/home_img_btn"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="openHome"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@android:drawable/arrow_up_float"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>